--- a/Resources/fr.lproj/Localizable.strings
+++ b/Resources/fr.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "Restauration du Portefeuille";
-"restore_wallet_info" = "Seuls vos fonds peuvent être restaurés à partir de la Blockchain. L'historique des transactions est sauvegardée localement et est crypté grace à votre mot de passe et ne peut donc pas être restauré.";
+"restore_wallet_info" = "224/5000\nVous essayez de restaurer un portefeuille Beam existant. Veuillez noter que si vous utilisez votre portefeuille sur un autre appareil, votre solde sera à jour, mais l{[=-apos;-=]}historique et les adresses des transactions seront conservés séparément sur chaque appareil.";
 "no_space_title" = "Pas assez de mémoire";
 "no_space_info" = "Au moins 200 Mo d'espace libre est nécessaire sur l'appareil pour restaurer le portefeuille";
 "beam_title" = "Crypto monnaie confidentielle et évolutive";
@@ -16,7 +16,8 @@
 "seed_prhase" = "Phrase clé";
 "input_seed" = "Saisir votre phrase clé";
 "confirm_seed_text" = "Pour vous assurer que la phrase-clé est bien écrite, veuillez compléter les mots ci-dessous";
-"display_seed" = "Votre phrase clé est le moyen d'accéder à toutes les monnaies cryptées de votre portefeuille. Ecrivez la phrase pour la garder dans un coffre-fort ou dans un coffre-fort verrouillé. Sans cette phrase, vous ne pourrez pas récupérer votre argent.";
+"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. From now on you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"display_seed_old" = "Votre phrase clé est le moyen d'accéder à toutes les monnaies cryptées de votre portefeuille. Ecrivez la phrase pour la garder dans un coffre-fort ou dans un coffre-fort verrouillé. Sans cette phrase, vous ne pourrez pas récupérer votre argent.";
 "intro_seed_main" = "Créer un nouveau portefeuille en générant une phrase clé.\nSi vous perdez votre appareil,\nvous aurez besoin de cette phrase pour récupérer votre portefeuille! Merci de ne jamais sauvegarder cette phrase clé via un trousseau ou un manager de mot de passe. Ne l'enregistrez jamais dans vos dossiers locaux ou distants, sous quelque forme que ce soit.";
 "intro_seed_1" = "Ne laissez personne voir votre phrase clé";
 "intro_seed_2" = "Ne jamais sauvegarder votre phrase clé dans des gestionnaires de mots de passe ou ailleurs";
@@ -33,14 +34,14 @@
 "return_to_seed_title" = "Retour à la phrase clé";
 "return_to_seed_info" = "Si vous retournerez à l'écran précédent, votre phrase de graine réinitialisera et votre mot de passe local ne sera pas enregistré.";
 "return" = "Retour";
-"old_password" = "Votre nouveau mot de passe ne peut pas être identitique à votre ancien mot de passe";
+"old_password" = "Votre nouveau mot de passe ne peut pas être identitique à votre ancien mot de passe ";
 "enable" = "Activer";
 "dont_use" = "Ne pas utiliser";
 "change_password" = "Modifier mot de passe";
 "passwords_dont_match" = "Les mots de passe de correspondent pas";
 "create_new_password" = "Créer un mot de passe pour accéder à votre portefeuille";
 "enter_password" = "Entrer mot de passe";
-"confirm_password" = "Confirmer votre mot de passe";
+"confirm_password" = "Confirmer votre nouveau mot de passe";
 "password_requariments" = "Le mot de passe fort doit répondre aux exigences suivantes:\n• la longueur doit être d'au moins 10 caractères\n• doit contenir au moins une lettre minuscule\n•  doit contenir au moins une lettre majuscule\n• doit contenir au moins un chiffre";
 "creating_wallet" = "Création du portefeuille";
 "error" = "Erreur";
@@ -110,7 +111,7 @@
 "seed_back_text" = "Votre phrase clé va devenir obsolète et une nouvelle phrase sera générée";
 "generate" = "Générer";
 "address" = "Adresse";
-"exp_date" = "Date d'expiration";
+"exp_date" = "Date d{[=-apos;-=]}expiration";
 "annotation" = "Annotation";
 "show_qr_code" = "Montrer le code QR";
 "copy_address" = "Copier adresse";
@@ -123,8 +124,8 @@
 "never" = "Jamais";
 "address_expires" = "L'adresse a expiré";
 "save" = "Sauvegarder";
-"active_address" = "Adresse active";
-"expire_now" = "Faire expirer l'adresse maintenant";
+"active_address" = "Activer l{[=-apos;-=]}adresse";
+"expire_now" = "Expiration de l{[=-apos;-=]}adresse maintenant";
 "open_settings" = "Accéder aux paramètres";
 "camera_denied_text" = "Il semble que vos paramètres de confidentialité nous empêchent d’accéder à votre appareil photo pour scanner le code Qr. Vous pouvez résoudre ce problème en procédant comme suit:\n\n1. Cliquez sur le bouton Go ci-dessous pour ouvrir les Paramètres.\n\n2. Activez l'appareil photo.\n\n3. Ouvrez cette application et réessayez.";
 "camera_restricted" = "Vous n'avez pas le droit d'utiliser l'appareil photo de cet appareil. Sans accès à ce dernier, cette fonctionnalité ne fonctionnera pas. Veuillez contacter le propriétaire de l'appareil afin qu'il puisse vous donner accès";
@@ -132,12 +133,12 @@
 "scan_qr_code" = "Scanner le code QR";
 "scan_tg_qr_code" = "Scanner le code QR Telegram";
 "receive" = "Recevoir";
-"hours_24" = "24 heures";
+"hours_24" = "24 heure";
 "delete_all_addresses" = "Supprimer toutes les adresses";
 "delete_all_contacts" = "Effacer tous les contacts";
-"delete_all_transactions" = "Effacer toutes les transactions";
+"delete_all_transactions" = "Supprimer toutes les transactions";
 "clear" = "Effacer";
-"clear_data" = "Effacer données";
+"clear_data" = "Effacer les données";
 "contacts" = "Contacts";
 "contact" = "Contact";
 "stay_active_title" = "Rester en activité";
@@ -167,7 +168,8 @@
 "category_exist" = "Ce tag existe déjà";
 "edit" = "Modifier";
 "delete" = "Effacer";
-"no_category_addresses" = "il n'y a pas d'adresse associée à ce tag";
+"no_category_addresses" = "There are no addresses associated with this tag";
+"no_category_contacts" = "There are no contacts associated with this tag";
 "delete_category" = "Supprimer le tag";
 "beams_send" = "Beams envoyés";
 "undo" = "Annuler";
@@ -215,6 +217,7 @@
 "total_utxo" = "Total valeur UTXO";
 "send_notice" = "Pour compléter la transaction, le récipiendaire doit se connecter dans les douze heures et vous devrez être en ligne dans les deux heures suivant.";
 "save_address_title" = "Sauvegarder adresse";
+"save_contact_title" = "Save contact";
 "save_contact_text" = "Voulez-vous sauvegarder l'adresse du récipiendaire pour de futures transactions ?";
 "save_address_text" = "Voulez-vous enregistrer l'adresse créée et l'utiliser plus tard ?";
 "not_save" = "Ne pas sauvegarder";
@@ -314,13 +317,13 @@
 "canot_connect_node" = "Impossible de se connecter au noeud";
 "buy_beam_value" = "Envoyer (value) à l'adresse ci-dessus (name) pour compléter la transaction"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
 "scan_receiver_qr_code" = "Scanner le code QR Telegram";
-"owner_key_warning" = "Veuillez noter que la révélation de votre clé propriétaire permet de connaître tous vos fonds (UTXO). Assurez-vous de déployer la clé sur un nœud auquel vous faites confiance !";
+"owner_key_warning" = "Deploying the owner key at a trusted node will allow the node to monitor all UTXO sent to any wallet generated from the same seed phrase.\n\nDon't share your Owner Key with others - it allows inspection and monitoring of your funds."; // \n\n - new line. please don't remove this symbols.
 "key_code" = "Codes clé";
 "or" = "Ou";
 "pick_address" = "Changement"; // change address
 "utxo_type_change" = "Changement"; // utxo type
 "your_current_password" = "Entrez votre mot de passe actuel";
-"paste_payment_proof" = "Merci de coller votre preuve de paiement ici";
+"paste_payment_proof" = "Merci de copier et de coller votre preuve de paiement ici";
 "payment_proof_error" = "Impossible de décoder une preuve, séquence illégale";
 "tx_status_unknown" = "Raison inconnue";
 "tx_status_cancelled" = "Transaction annulée";
@@ -329,8 +332,8 @@
 "tx_status_not_valid" = "La transaction n'est pas valide";
 "tx_status_invalid_kernel" = "La preuve du kernel est invalide";
 "tx_status_params" = "L'envoi des paramètres tx a echoué";
-"tx_status_no_inputs" = "Pas d'entrée";
-"tx_status_expired_address" = "L'adresse a expiré";
+"tx_status_no_inputs" = "Pas d{[=-apos;-=]}entrée";
+"tx_status_expired_address" = "L{[=-apos;-=]}adresse a expiré";
 "tx_status_failed_parameter" = "Impossible d'obtenir le paramètre";
 "tx_status_expired" = "La transaction a expiré";
 "tx_status_not_signed" = "Paiement non signé par le récipiendaire";
@@ -348,7 +351,7 @@
 "language" = "Langue";
 "optional" = "En option";
 "invalid_address_title" = "Adresse invalide";
-"invalid_address_text" = "L'adresse du noeud fournie est invalide.\n Veuillez vérifier si l'adresse saisie est correcte";
+"invalid_address_text" = "The provided node address is invalid. Please, check if the entered address is correct";
 "insufficient_funds" = "Fonds insuffisants: vous auriez besoin de (value) pour finaliser la transaction";
 "downloading" = "Téléchargées";
 "sent_to_own" = "Envoyé à votre propre adresse";
@@ -375,12 +378,16 @@
 "tag" = "Tag";
 "contacts_empty" = "Votre liste de contacts est vide";
 "addresses_empty" = "Votre carnet d'adresses est vide";
+"addresses_empty_active" = "Vous n'avez aucune adresse inactive";
+"addresses_empty_expired" = "Vous n'avez aucune adresse inactive";
 "utxo_empty" = "Votre liste d'UTXO est vide";
+"utxo_empty_progress" = "Vous n'avez pas d'UTXO actif";
 "transactions_empty" = "Votre historique de transaction est vide";
+"transactions_empty_progress" = "Vous n'avez pas de transactions actives";
 "automatic_restore_title" = "Restauration recommandée";
-"automatic_restore_text" = "Le portefeuille Beam va télécharger une image de la blockchain à partir du Cloud.";
+"automatic_restore_text" = "Beam Wallet will download a snapshot of the blockchain and restore your funds on the device";
 "manual_restore_title" = "Restaurer avec un noeud vérifié";
-"manual_restore_text" = "Le portefeuille Beam se connectera à un noeud spécifique et le noeud trouvera tous vos fonds sur la blockchain.";
+"manual_restore_text" = "Beam Wallet will connect to specific trusted node (configured with your owner key) and the node will restore your funds";
 "paste_owner_key" = "Collez ce code dans le portefeuille Beam sur votre bureau pour continuer à restaurer à partir du nœud.";
 "after_paste_owner_key" = "Une fois que vous collez le code, exécutez votre nœud sur le bureau et cliquez sur l'application mobile.";
 "enter_trusted_node" = "Entrez l'adresse du noeud vérifié";
@@ -403,10 +410,74 @@
 "date" = "Date";
 "downloading_blockchain" = "Téléchargement de la blockchain en cours";
 "and" = "et"; // example: addresses and contacts
-"auto_restore_warning" = "Please make sure that you have not done any transactions (from any device) in the past hour. If you did, please wait for at least one hour after the last transaction before proceeding with Restore. Otherwise, your restored balance may be incorrect and additional restore procedure will be required.";
-"manual_restore_warning" = "Verify that your node is fully synchronised with the blockchain before starting the restore procedure. Otherwise, your restored balance may be incorrect and additional restore procedure will be required.";
-"understand" = "I understand";
-"NSPhotoLibraryAddUsageDescription" = "Save transaction details and scan QR-codes from the photos";
-"NSPhotoLibraryUsageDescription" = "Provide gallery access to select QR code";
-"NSFaceIDUsageDescription" = "This app requires Face ID permission to authenticate using Face recognition";
-"NSCameraUsageDescription" = "The camera is needed to scan QR codes";
+"auto_restore_warning" = "Veuillez vous assurer que vous n'avez pas effectué de transactions (depuis n'importe quel appareil) dans l'heure écoulée. Si vous l'avez fait, veuillez patienter au moins une heure après la dernière transaction avant de procéder à la restauration. Sinon, votre solde restauré peut être incorrect et une procédure de restauration supplémentaire sera nécessaire.";
+"manual_restore_warning" = "Vérifiez que votre noeud est entièrement synchronisé avec la chaîne de blocs avant de démarrer la procédure de restauration. Sinon, votre solde restauré peut être incorrect et une procédure de restauration supplémentaire sera nécessaire.";
+"understand" = "Je comprends";
+"NSPhotoLibraryAddUsageDescription" = "Enregistrer les détails de la transaction et scanner les codes QR à partir des photos";
+"NSPhotoLibraryUsageDescription" = "Fournir un accès à la galerie pour sélectionner le code QR";
+"NSFaceIDUsageDescription" = "Cette application nécessite la permission de Face ID pour authentification en utilisation la reconnaissance Visage";
+"NSCameraUsageDescription" = "L'appareil photo est nécessaire pour scanner les codes QR";
+"search_transactions" = "Search by transaction or kernel ID, comment, address or contact";
+"random_node" = "Se connecter à un nœud aléatoire";
+"restore_create_title" = "Restaurer un portefeuille existant ou créer un nouveau portefeuille";
+"restore_create_text" = "Si vous restaurez un portefeuille, l'historique et les adresses des transactions seront perdues.";
+"proceed" = "Procéder";
+"info_restore_title" = "Ne pas exécuter simultanément deux portefeuilles initiés à partir de la même phrase Seed";
+"info_restore_text" = "Votre balance et l'historique de vos transactions ne seront pas syncronisées sur vos appareils et certaines transactions peuvent échouer.";
+"crash_title" = "Beam Wallet crashed unexpectedly";
+"crash_message" = "Would you agree to report your limited amount of information to us? Collecting crash information would allow us to discover and fix bugs much faster. This is only a single crash-related report, we won't keep collecting any of your data later.";
+"crash_negative" = "No, thanks";
+"crash_positive" = "Send report";
+"estimted_time" = "Estimated time";
+"node_address" = "Adresse du nœud";
+"create_new_password_short" = "Entrer un nouveau mot de passe";
+"a_15" = "After 15 seconds"; // lock screen after 15 seconds
+"a_30" = "After 30 seconds"; // lock screen after 30 seconds
+"a_60" = "After 1 minute"; // lock screen after 1 minute
+"a_15_1" = "15 seconds";
+"a_30_1" = "30 seconds";
+"a_60_1" = "1 minute";
+"lock_screen" = "Vérouiller écran";
+"colour" = "Colour";
+"show_owner_key_auth_1" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must enter your password to see Owner Key.";
+"show_owner_key_auth_2" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must pass 2-step verification (submit a password and use Touch ID) to see your Owner Key.";
+"show_owner_key_auth_3" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must pass 2-step verification (submit a password and use Face ID) to see your Owner Key.";
+"use_touch_id" = "Use your Touch ID";
+"use_face_id" = "Use your Face ID";
+"enter_your_password" = "Enter your password";
+"share_details" = "Share details";
+"faucet_title" = "Start using the wallet";
+"faucet_text" = "Would you like to see the wallet in action? Get a very small amount of Beams from the community faucet.";
+"faucet_ok" = "Yes, please";
+"faucet_no" = "No, I'm fine";
+"show_seed_phrase" = "Show seed phrase";
+"increase_security" = "Increase security";
+"increase_security_text" = "If you ever lose your device, you will need this phrase to recover your wallet!\nNever type your seed phrase in keychains or password managers.\nNever save it in your local or remote folders in any form.";
+"all_set" = "You are all set";
+"wallet_is_secure" = "Your wallet is secure now! Be calm in it’s feature use.";
+"make_wallet_secure_title" = "Make your wallet secure";
+"make_wallet_secure_text" = "Please increase wallet security by saving your seed phrase so you won’t loose your funds.";
+"complete_verification" = "Complete verification";
+"yes_please" = "yes, please";
+"i_will_later" = "i will do it later";
+"create_password" = "Create password";
+"get_coins" = "Get coins";
+"secure_your_phrase" = "Secure your phrase";
+"privacy" = "Privacy";
+"complete_wallet_verification" = "Complete wallet verification";
+"clear_local_data" = "Clear local wallet data";
+"get_beam_faucet" = "Get Beams from Beam Community Faucet";
+"save_wallet_logs" = "Sauvegarder les logs du portefeuille";
+"all_time" = "For all time";
+"last_5_days" = "Last 5 days";
+"last_15_days" = "Last 15 days";
+"last_30_days" = "Last 30 days";
+"clear_wallet" = "Clear wallet";
+"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
+"change_node_text_1" = "Use Face ID or enter your password to change node settings";
+"change_node_text_2" = "Use Touch ID or enter your password to change node settings";
+"change_node_text_3" = "Enter your password to change node settings";
+"change_settings_text_1" = "Use Face ID or enter your password to change settings";
+"change_settings_text_2" = "Use Touch ID or enter your password to change settings";
+"change_settings_text_3" = "Enter your password to change settings";
+"paste" = "Coller";
