--- a/Resources/sv.lproj/Localizable.strings
+++ b/Resources/sv.lproj/Localizable.strings
@@ -1,10 +1,10 @@
 "restore_wallet_title" = "Återställ plånbok";
-"restore_wallet_info" = "Endast dina tillgångar kan återställas helt från block-kedjan. Transaktionshistoriken är lokalt sparad och är krypterat med ditt lösenord, och kan således ej bli återställt. Detta är den slutgiltiga versionen fram tills framtida valideringar och processer.";
+"restore_wallet_info" = "Du försöker nu återställa en befintlig Beam-plånbok. Notera att om du använder din plånbok på en annan enhet kommer balansen vara uppdaterad men transaktionshistorik och adresser kommer hållas separat per enhet.";
 "no_space_title" = "Otillräckligt lagringsutrymme";
 "no_space_info" = "Åtminstone 200 MB ledigt utrymme behövs på enheten för att återställa plånboken";
 "beam_title" = "Skalbar konfidentiell kryptovaluta";
 "create_new_wallet" = "Skapa ny plånbok";
-"enter_password_title" = "Ange ditt lösenord för att få tillgång till plånboken";
+"enter_password_title" = "Mata in ditt lösenord för att få tillgång till plånboken";
 "empty_password" = "Lösenordsfältet kan inte vara tomt";
 "incorrect_password" = "Felaktigt lösenord";
 "incompatible_node_title" = "Okompatibel nod";
@@ -16,7 +16,8 @@
 "seed_prhase" = "Seed phrase";
 "input_seed" = "Ange ditt seed phrase";
 "confirm_seed_text" = "För att säkerställa att seed phrase är nerskrivet, vänligen fyll i de specifika orden nedan";
-"display_seed" = "Ditt seed phrase tillåter åtkomsten till alla kryptovalutor i din plånbok. Skriv ner seed phrase och spar detta i ett kassaskåp eller i ett låst valv. Om ditt seed phrase försvinner kommer du inte kunna återställa dina pengar.";
+"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. From now on you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"display_seed_old" = "Ditt seed phrase tillåter åtkomsten till alla kryptovalutor i din plånbok. Skriv ner seed phrase och spar detta i ett kassaskåp eller i ett låst valv. Om ditt seed phrase försvinner kommer du inte kunna återställa dina pengar.";
 "intro_seed_main" = "Skapa en ny plånbok genom att generera ett seed phrase. Om du blir av med din enhet så behövs ditt seed phrase för att återställa tillgångarna. Ange aldrig ditt seed phrase på en nyckelknippa eller lösenordsmanagerare. Spara aldrig detta på ditt lokala filsystem eller några fjärr-mappar av någon sort.";
 "intro_seed_1" = "Låt ingen annan se din seed phrase";
 "intro_seed_2" = "Ange aldrig din seed phrase i mjukvara som managerar lösenord eller liknande";
@@ -54,7 +55,7 @@
 "restor_wallet_info" = "Endast plånbokens balans (UTXO) kan återställas, transaktionsinformation är alltid privata och lagras aldrig i block-kedjan.";
 "receive" = "Ta emot";
 "send" = "Skicka";
-"available" = "Tillgänglig";
+"available" = "Tillgängligt";
 "in_progress" = "Pågående";
 "receiving" = "Mottager";
 "sending" = "Skickar";
@@ -114,7 +115,7 @@
 "annotation" = "Anteckning";
 "show_qr_code" = "Visa QR-kod";
 "copy_address" = "Kopiera adress";
-"edit_address" = "Ändra adress";
+"edit_address" = "Editera adress";
 "delete_address" = "Ta bort adress";
 "delete_address_transaction" = "Ta bort adress och relaterade transaktioner";
 "delete_address_only" = "Ta bort endast adress";
@@ -123,7 +124,7 @@
 "never" = "Aldrig";
 "address_expires" = "Adress utgår";
 "save" = "Spara";
-"active_address" = "Aktiv adress";
+"active_address" = "Aktivera adress";
 "expire_now" = "Sätt adress som utgånget nu";
 "open_settings" = "Öppna inställningar";
 "camera_denied_text" = "Det verkar som att dina integritets-inställningar förhindrar oss från att få tillgång till kameran för att kunna scanna Qr-koder. Du kan åtgärda detta genom att göra följande: 1. Rör vid Go-knappen nedan för att öppna inställningar. 2. Sätt kameran till på. 3. Öppna denna app igen och försök igen.";
@@ -131,7 +132,7 @@
 "error_scan_qr_code" = "QR-koden känns inte igen. Vänligen testa igen.";
 "scan_qr_code" = "Scanna QR-kod";
 "scan_tg_qr_code" = "Scanna telegram QR-kod";
-"receive" = "Motta";
+"receive" = "Ta emot";
 "hours_24" = "24 timmar";
 "delete_all_addresses" = "Ta bort alla adresser";
 "delete_all_contacts" = "Ta bort alla kontakter";
@@ -140,17 +141,17 @@
 "clear_data" = "Rensa data";
 "contacts" = "Kontakter";
 "contact" = "Kontakt";
-"stay_active_title" = "Håll aktiverad";
+"stay_active_title" = "Håll aktiv";
 "stay_active_text" = "Stäng inte plånboken, annars kommer transaktionen inte att gå igenom";
 "rate_title" = "\n\n\nDin röst betyder något!";
 "rate_text" = "Vänligen betygsätt din användning av Beam-plånboken";
 "rate_app" = "Betygsätt appen";
 "feedback" = "Återkoppling";
 "not_now" = "Inte nu";
-"amount_empty" = "Mängd kan ej vara tom";
+"amount_empty" = "Belopp-fältet kan ej vara tom";
 "amount_zero" = "Belopp måste vara större än noll";
 "next" = "Nästa";
-"where_buy_beam" = "Var köper jag BEAM?";
+"where_buy_beam" = "Vart köper man BEAM?";
 "updating" = "Uppdaterar";
 "connecting" = "Ansluter";
 "online" = "Uppkopplad";
@@ -167,7 +168,8 @@
 "category_exist" = "Denna tag finns redan";
 "edit" = "Ändra";
 "delete" = "Ta bort";
-"no_category_addresses" = "det finns inga adresser som är associerade med denna tag";
+"no_category_addresses" = "Det finns inga adresser som är associerade med denna tag";
+"no_category_contacts" = "Det finns inga kontakter associerade med denna tag";
 "delete_category" = "Ta bort tag";
 "beams_send" = "Beam skickade";
 "undo" = "Ångra";
@@ -188,11 +190,11 @@
 "ownerkey_faceid_text" = "Ange ditt lösenord och använd Ansikts-ID för att få tillgång till plånboken";
 "ownerkey_faceid_subtext" = "För att se ägarnyckeln måste du utföra denna 2-stegs verifiering(ange ett lösenord samt använda Ansikts-ID)";
 "ownerkey_touchid_subtext" = "För att se ägarnyckeln måste du utföra denna 2-stegs verifiering(ange ett lösenord samt använda Touch-ID)";
-"ownerkey_text" = "Ange ditt lösenord för att få tillgång till plånboken";
+"ownerkey_text" = "Mata in ditt lösenord för att få tillgång till plånboken";
 "ownerkey_subtext" = "För att se ägarnyckeln måste du gå igenom denna verifikation";
 "ownerkey_copied" = "Ägarens nyckel-kod kopierat till urklipp";
 "advanced" = "Avancerat";
-"expires" = "Utgår";
+"expires" = "Utgånget";
 "none" = "Inga";
 "change_address" = "Byt adress";
 "auto_address" = "Adress (automatiskt genererad)";
@@ -211,10 +213,11 @@
 "name" = "Namn";
 "confirm" = "Bekräftelse";
 "send_to" = "Skicka till";
-"amount_to_send" = "Mängd att skicka";
+"amount_to_send" = "Belopp att skicka";
 "total_utxo" = "Totalt UTXO-värde";
 "send_notice" = "För att transaktionen skall gå igenom måste mottagaren komma online inom 12 timmar och du måste vara online inom 2 timmar efteråt";
 "save_address_title" = "Spara adress";
+"save_contact_title" = "Spara kontakt";
 "save_contact_text" = "Vill du spara mottagar-adressen för framtida transaktioner?";
 "save_address_text" = "Vill du spara skapade adresser och använda dessa vid ett senare tillfälle?";
 "not_save" = "Spara inte";
@@ -233,7 +236,7 @@
 "ip_port" = "ip:port";
 "ask_password" = "Fråga efter lösenord vid varje skickad transaktion";
 "allow_open_link" = "Tillåt att öppna externa länkar";
-"change_wallet_password" = "Byta plånbokens lösenord";
+"change_wallet_password" = "Byt plånbokens lösenord";
 "create_new_category" = "Skapa ny tag";
 "report_problem" = "Rapportera ett problem";
 "open_tg_bot" = "Öppna telegram bot";
@@ -259,20 +262,20 @@
 "you_get" = "Du kommer att mottaga";
 "recipient_address" = "mottagande adress";
 "refund_address" = "återbetalande adress";
-"min_amount" = "Minsta mängd är";
+"min_amount" = "Minsta belopp är";
 "beam_to_receive" = "Beam att motta";
 "beam_recepient_auto" = "Beam mottagande adress(autogenererad)";
 "beam_recepient" = "Beam mottagande adress";
 "start_transaction" = "Starta transaktion";
 "star_transaction_notice" = "Genom att klicka på \"Starta transaktion\" accepterar du CryptoWolf Användarvillkor";
 "terms_of_use" = "Användarvillkor";
-"incorrect_amount" = "Mängd måste vara större eller lika med minsta tillåtna mängd";
-"min_amount_loading" = "Minsta möjliga mängd laddar...";
+"incorrect_amount" = "Belopp måste vara större eller lika med minsta tillåtna belopp";
+"min_amount_loading" = "Minsta möjliga belopp laddar...";
 "create_categories_in_settings" = "Du kan skapa fler tagar under Inställningar.";
 "my_addresses" = "Mina adresser";
-"wrong_requested_amount_title" = "Felaktigt begärd mängd";
-"wrong_requested_amount_text" = "Begärd mängd kan inte var a0 BEAM. Vänligen ange en korrekt mängd.";
-"enter_amount_in_currency" = "Ange mängd i";
+"wrong_requested_amount_title" = "Felaktigt begärt belopp";
+"wrong_requested_amount_text" = "Begärt belopp kan inte vara 0 BEAM. Vänligen ange ett korrekt belopp.";
+"enter_amount_in_currency" = "Ange belopp i";
 "scan_btc_qr_code" = "Scanna bitcoin QR-kod";
 "scan_ltc_qr_code" = "Scanna litecoin QR-kod";
 "scan_eth_qr_code" = "Scanna ethereum QR-kod";
@@ -282,7 +285,7 @@
 "buy_transaction_success_title" = "Transaktion genomförd";
 "buy_transaction_success_text" = "BEAMS kommer snart att krediteras";
 "open_in_explorer" = "Öppna i block-kedjans utforskare";
-"receive_beam" = "Ta emot BEAM";
+"receive_beam" = "Mottagna BEAM";
 "send_beam" = "Skicka BEAM";
 "pending" = "Väntande";
 "completed" = "Avslutad";
@@ -311,10 +314,10 @@
 "utxo_history" = "UTXO-historik";
 "delete_all_text" = "Är du säker på att du vill ta bort all (str) från din plånbok?";
 "delete_category_text" = "Är du säker på att du vill ta bort \"(str)\" tag?";
-"canot_connect_node" = "Kan inte ansluta till nod";
+"canot_connect_node" = "Kunde inte ansluta till nod";
 "buy_beam_value" = "Skicka (value) till ovan (name) adress för att slutföra transaktionen"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
 "scan_receiver_qr_code" = "Scanna mottagarens QR-kod";
-"owner_key_warning" = "Vänligen notera, om du avslöjar ägar-nyckeln så har du vetskap om alla tillgångar (UTXO). Var helt säker på att du litar fullt ut på noden där nyckeln används!";
+"owner_key_warning" = "Om du installerar ägarnyckeln på en betrodd nod, tillåter noden att övervaka all UTXO som skickas till en plånbok som genereras från samma seed phrase. \n\n Dela inte din ägarnyckel med andra - det tillåter inspektion och övervakning av dina tillgångar."; // \n\n - new line. please don't remove this symbols.
 "key_code" = "Nyckel-kod";
 "or" = "Eller";
 "pick_address" = "Ändra"; // change address
@@ -340,14 +343,14 @@
 "receiving_amount_dif" = "Mottagande belopp kan skilja sig på grund av marknadssvängningar";
 "copy_details" = "Kopiera detaljer";
 "copy_code" = "Kopiera kod";
-"version" = "Version"; // example Version 3.1
+"version" = "App version"; // example Version 3.1
 "as_set" = "som är satt just nu";
 "transaction_deleted" = "Transaktion borttagen";
 "transaction_comment" = "Transaktions-kommentar";
 "not_shared" = "Kommer inte att delas";
 "language" = "Språk";
 "optional" = "Valfritt";
-"invalid_address_title" = "Ogiltig adress";
+"invalid_address_title" = "Felaktig adress";
 "invalid_address_text" = "Den ifyllda nod-adressen är ogiltig. Vänligen kontrollera att angiven adress är korrekt";
 "insufficient_funds" = "Otillräckliga medel: du behöver (value) beams för att slutföra transaktionen";
 "downloading" = "Nerladdad";
@@ -375,12 +378,16 @@
 "tag" = "Tag";
 "contacts_empty" = "Din kontakt-lista är tom";
 "addresses_empty" = "Din adress-lista är tom";
+"addresses_empty_active" = "Du har inga aktiva adresser";
+"addresses_empty_expired" = "Du har inga utgångna adresser";
 "utxo_empty" = "Din UTXO-lista är tom";
+"utxo_empty_progress" = "Du har inga aktiva UTXOn";
 "transactions_empty" = "Din transaktions-lista är tom";
+"transactions_empty_progress" = "Du har inga aktiva transaktioner";
 "automatic_restore_title" = "Rekommenderad återställning";
-"automatic_restore_text" = "Beam-plånboken kommer att ladda ner block-kedjans ögonblicksbild från molnet.";
+"automatic_restore_text" = "Beam Wallet will download a snapshot of the blockchain and restore your funds on the device";
 "manual_restore_title" = "Återställ med trovärdig nod";
-"manual_restore_text" = "Beam-plånboken kommer att ansluta till en specifik nod och du kommer att återställa dina tillgångar via block-kedjan.";
+"manual_restore_text" = "Beam Wallet will connect to specific trusted node (configured with your owner key) and the node will restore your funds";
 "paste_owner_key" = "Klistra in denna kod i Beam-plånboken på din dator för att fortsätta återställningen från noden.";
 "after_paste_owner_key" = "När du har klistrat in koden, kör din nod på datorn och klicka \"nästa\" på din mobila app.";
 "enter_trusted_node" = "Mata in pålitlig nod-adress";
@@ -404,9 +411,73 @@
 "downloading_blockchain" = "Laddar ner blockkedje-info";
 "and" = "och"; // example: addresses and contacts
 "auto_restore_warning" = "Vänligen se till att inga transaktioner (från någon enhet) gjorts under den senaste timmen. Om du har det, vänta i åtminstone en timme efter den senaste transaktionen innan du fortsätter med Återställning. Annars kan din återställda balans vara felaktig och ytterligare återställningsprocedurer kommer att krävas.";
-"manual_restore_warning" = "Verify that your node is fully synchronised with the blockchain before starting the restore procedure. Otherwise, your restored balance may be incorrect and additional restore procedure will be required.";
+"manual_restore_warning" = "Verifiera att din nod är fullt synkroniserad med blockkedjan innan du startar återställningsproceduren. Om inte så kommer din återställda balans att eventuellt vara felaktig och ytterligare återställningsprocedurer kommer att vara nödvändiga.";
 "understand" = "Jag förstår";
-"NSPhotoLibraryAddUsageDescription" = "Save transaction details and scan QR-codes from the photos";
-"NSPhotoLibraryUsageDescription" = "Provide gallery access to select QR code";
-"NSFaceIDUsageDescription" = "This app requires Face ID permission to authenticate using Face recognition";
-"NSCameraUsageDescription" = "The camera is needed to scan QR codes";
+"NSPhotoLibraryAddUsageDescription" = "Spara transaktionsdetaljerna och scanna QR-koderna från fotot";
+"NSPhotoLibraryUsageDescription" = "Delge tillgång till galleriet för att välja QR-kod";
+"NSFaceIDUsageDescription" = "Denna app kräver tillåtelse att använda Ansikts-ID för att autentisera med Ansiktsigenkänning";
+"NSCameraUsageDescription" = "Kameran behövs för att scanna QR-koder";
+"search_transactions" = "Sök med transaktions eller kernel-ID, kommentar, adress eller kontakt";
+"random_node" = "Anslut till slumpmässig nod";
+"restore_create_title" = "Återställ plånbok eller skapa en ny";
+"restore_create_text" = "Om du återställer en plånbok så kommer all transaktionshistorik och adresser att förloras.";
+"proceed" = "Fortsätt";
+"info_restore_title" = "Kör inte två plånböcker sammtidigt som har blivit initierade från samma seed phrase";
+"info_restore_text" = "Balans- och transaktionshistoriken kommer inte att synkroniseras mellan enheter och transaktioner kan misslyckas.";
+"crash_title" = "Beam-plånboken krashade oväntat";
+"crash_message" = "Skulle du godkänna att rapportera din begränsade mängd information till oss? Insamlandet av krash-informationen skulle möjliggöra att vi upptäcker fixar och buggar mycket snabbare. Detta är endast en krash-relaterad rapport, vi kommer inte att samla in några av dina data senare.";
+"crash_negative" = "Nej tack";
+"crash_positive" = "Skicka rapport";
+"estimted_time" = "Uppskattad tid";
+"node_address" = "Nod-adress";
+"create_new_password_short" = "Skapa nytt lösenord";
+"a_15" = "Efter 15 sekunder"; // lock screen after 15 seconds
+"a_30" = "Efter 30 sekunder"; // lock screen after 30 seconds
+"a_60" = "Efter 1 minut"; // lock screen after 1 minute
+"a_15_1" = "15 sekunder";
+"a_30_1" = "30 sekunder";
+"a_60_1" = "1 minut";
+"lock_screen" = "Lås skärm";
+"colour" = "Färg";
+"show_owner_key_auth_1" = "Om du installerar ägarnyckeln på en betrodd nod, tillåter noden att övervaka all UTXO som skickas till denna plånbok och plånböcker som genereras från samma seed phrase. Du måste ange ditt lösenord för att se Ägarnyckeln.";
+"show_owner_key_auth_2" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must pass 2-step verification (submit a password and use Touch ID) to see your Owner Key.";
+"show_owner_key_auth_3" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must pass 2-step verification (submit a password and use Face ID) to see your Owner Key.";
+"use_touch_id" = "Use your Touch ID";
+"use_face_id" = "Use your Face ID";
+"enter_your_password" = "Enter your password";
+"share_details" = "Share details";
+"faucet_title" = "Start using the wallet";
+"faucet_text" = "Would you like to see the wallet in action? Get a very small amount of Beams from the community faucet.";
+"faucet_ok" = "Yes, please";
+"faucet_no" = "No, I'm fine";
+"show_seed_phrase" = "Show seed phrase";
+"increase_security" = "Increase security";
+"increase_security_text" = "If you ever lose your device, you will need this phrase to recover your wallet!\nNever type your seed phrase in keychains or password managers.\nNever save it in your local or remote folders in any form.";
+"all_set" = "You are all set";
+"wallet_is_secure" = "Your wallet is secure now! Be calm in it’s feature use.";
+"make_wallet_secure_title" = "Make your wallet secure";
+"make_wallet_secure_text" = "Please increase wallet security by saving your seed phrase so you won’t loose your funds.";
+"complete_verification" = "Complete verification";
+"yes_please" = "yes, please";
+"i_will_later" = "i will do it later";
+"create_password" = "Create password";
+"get_coins" = "Get coins";
+"secure_your_phrase" = "Secure your phrase";
+"privacy" = "Privacy";
+"complete_wallet_verification" = "Complete wallet verification";
+"clear_local_data" = "Clear local wallet data";
+"get_beam_faucet" = "Get Beams from Beam Community Faucet";
+"save_wallet_logs" = "Spara plånboksloggar";
+"all_time" = "For all time";
+"last_5_days" = "Last 5 days";
+"last_15_days" = "Last 15 days";
+"last_30_days" = "Last 30 days";
+"clear_wallet" = "Clear wallet";
+"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
+"change_node_text_1" = "Use Face ID or enter your password to change node settings";
+"change_node_text_2" = "Use Touch ID or enter your password to change node settings";
+"change_node_text_3" = "Enter your password to change node settings";
+"change_settings_text_1" = "Use Face ID or enter your password to change settings";
+"change_settings_text_2" = "Use Touch ID or enter your password to change settings";
+"change_settings_text_3" = "Enter your password to change settings";
+"paste" = "Klistra in";
